# Diff

./: Diff.cabal  flake.nix
bench/: bench.hs
src/Data/Algorithm/: Diff.hs  DiffContext.hs  DiffOutput.hs
test/: Test.hs
