name:          Diff
version:       0.5
synopsis:      O(ND) diff algorithm in haskell.
description:
  Implementation of the standard diff algorithm, and utilities for pretty printing.

category:      Algorithms
license:       BSD3
license-file:  LICENSE
author:        Sterling Clover
maintainer:    David Fox <dsf@seereason.com>
tested-with:   GHC ==7.8.4
build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  build-depends:
      array
    , base    >=3   && <=6
    , pretty  >=1.1
    , these
    , semialign

  hs-source-dirs:   src
  exposed-modules:
    Data.Algorithm.Diff
    Data.Algorithm.DiffContext
    Data.Algorithm.DiffOutput

  ghc-options:      -Wall -funbox-strict-fields

source-repository head
  type:     git
  location: http://github.com/seereason/Diff

test-suite diff-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test src
  main-is:          Test.hs
  build-depends:
      array
    , base                        >=3 && <=6
    , criterion
    , directory
    , pretty
    , process
    , these
    , semialign
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2

  other-modules:
    Data.Algorithm.Diff
    Data.Algorithm.DiffContext
    Data.Algorithm.DiffOutput

benchmark bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench src
  main-is:          bench.hs
  build-depends:
      array
    , base
    , criterion
    , deepseq
    , pretty
    , these
    , semialign
    , random

  other-modules:
    Data.Algorithm.Diff
    Data.Algorithm.DiffContext
    Data.Algorithm.DiffOutput

  ghc-options: -O2 -threaded

  default-language: Haskell2010
